tests/lustre/typechecking/shouldFail/machine_integer_06.lus

node top(x1, x2: uint8) returns (y: uint8);
let
   y = x1 lsh x2;
tel